--- a/src/components/Navbars/Navbar.scss
+++ b/src/components/Navbars/Navbar.scss
@@ -103,12 +103,22 @@
                             display: flex;
                             justify-content: center;
                             align-items: center;
+                            position: relative;
                         }
+                    }
+                    .cart__quantity {
+                        height: 10px;
+                        width: 10px;
+                        color: red;
+                        position: absolute;
+                        font-size: 12px;
+                        top: 18px;
+                        right: 250px;
                     }
                 }
 
                 .user__icon {
-                    width: 15%;
+                    width: 17%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -146,6 +156,7 @@
         }
     }
 }
+
 .search__box {
     width: 100%;
     min-height: 400px;
