--- a/src/components/Navbars/Navbar.scss
+++ b/src/components/Navbars/Navbar.scss
@@ -103,17 +103,20 @@
                             display: flex;
                             justify-content: center;
                             align-items: center;
-                            position: relative;
                         }
                     }
-                    .cart__quantity {
-                        height: 10px;
-                        width: 10px;
-                        color: red;
-                        position: absolute;
-                        font-size: 12px;
-                        top: 18px;
-                        right: 250px;
+
+                    .item__cart {
+                        position: relative;
+                        .cart__quantity {
+                            height: 10px;
+                            width: 10px;
+                            color: red;
+                            position: absolute;
+                            font-size: 12px;
+                            top: -12px;
+                            right: 0px;
+                        }
                     }
                 }
 
