--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,6 @@
     font-size: 100%;
 }
 
-
-
 .App {
     width: 100%;
     height: 100vh;
@@ -19,55 +17,19 @@
     .app_container {
         width: 100%;
         max-width: 1440px;
-        height: 100%;
+        height: auto;
+        background-color: #181818;
     }
-   $widthContent: 1440px;
-   $heightNavber: 80px;
-    .nav__container{
+    $widthContent: 1440px;
+    $heightNavber: 80px;
+    .nav__container {
         width: 100%;
         display: flex;
         justify-content: center;
         height: $heightNavber;
-        .navber__content{
+        .navber__content {
             width: 100%;
             max-width: $widthContent;
-
         }
     }
-
 }
-
-// @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
-// @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
-
-// * {
-//     font-family: "Poppins", sans-serif;
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-//     outline: none;
-//     border: none;
-//     text-decoration: none;
-//     text-transform: capitalize;
-//     transition: 0.2s linear;
-// }
-
-// html {
-//     font-size: 62.5%;
-//     overflow-x: hidden;
-//     scroll-behavior: smooth;
-//     scroll-padding-top: 8.5rem;
-// }
-
-// html::-webkit-scrollbar {
-//     width: 1rem;
-// }
-
-// html::-webkit-scrollbar-track {
-//     background: #fff;
-// }
-
-// html::-webkit-scrollbar-thumb {
-//     background: #27ae60;
-//     border-radius: 5rem;
-// }
