--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,5 @@
 .footer__container {
-    background-color: #dbd8d8;
-
+    background-color: #181818;
 
     .footer__one {
         width: 100%;
@@ -14,15 +13,16 @@
             width: 15%;
 
             h6 {
-
                 margin: 12px 0;
+                color: white;
             }
 
             ul {
                 list-style-type: none;
                 padding-left: 0;
-
+                color: white;
                 margin: 4px;
+                cursor: pointer;
             }
         }
     }
@@ -47,6 +47,7 @@
                 width: 80%;
                 display: flex;
                 margin: 12px auto;
+                color: white;
             }
         }
 
@@ -57,6 +58,15 @@
             p {
                 margin-top: 12px;
                 line-height: 1.4;
+                color: white;
+            }
+            .footer__infor__contact {
+                color: white;
+                a {
+                    text-decoration: none;
+                    color: white;
+                    margin: 0 8px;
+                }
             }
         }
     }
