--- a/src/components/Navbars/Navbar.scss
+++ b/src/components/Navbars/Navbar.scss
@@ -98,7 +98,7 @@
                         span {
                             width: 32px;
                             height: 32px;
-                            border: 1px solid white;
+                            border: none !important;
                             border-radius: 50%;
                             display: flex;
                             justify-content: center;
@@ -107,11 +107,12 @@
                     }
 
                     .cart__quantity {
-                        height: 10px;
-                        width: 10px;
+                        height: 16px;
+                        width: 16px;
                         color: red;
                         position: absolute;
-                        font-size: 12px;
+                        font-size: 16px;
+                        font-family: "Times New Roman", Times, serif;
                         top: 16px;
                         right: 6px;
                     }
@@ -170,7 +171,7 @@
         background-color: white;
         display: flex;
         gap: 10px;
-        z-index: 1;
+        z-index: 5;
 
         .menu__item {
             width: auto;
