--- a/src/pages/Carts/Cart_Item/Cart_item.scss
+++ b/src/pages/Carts/Cart_Item/Cart_item.scss
@@ -15,7 +15,7 @@
         .item__img {
             width: 90%;
             height: 90%;
-            border: 1px solid black;
+
             img {
                 width: 100%;
                 height: 100%;
@@ -25,9 +25,7 @@
     .cart__item_right {
         width: 50%;
         height: 100%;
-
         display: flex;
-        // flex-direction: column;
         justify-content: center;
         align-items: center;
         .item__right__detail {
@@ -45,12 +43,14 @@
                     width: 80%;
                     text-align: center;
                     line-height: 80px;
+                    color: white;
                 }
                 i {
                     width: 20%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    color: white;
                 }
             }
             .item__quantity {
@@ -62,12 +62,14 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
+                    color: white;
                 }
                 .price__yourcart {
                     width: 40%;
                     display: flex;
                     align-items: center;
                     justify-content: center;
+                    color: white;
                 }
             }
             .item__total {
@@ -76,6 +78,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                color: white;
             }
         }
     }
