--- a/src/pages/Menus/Menu.scss
+++ b/src/pages/Menus/Menu.scss
@@ -1,6 +1,5 @@
 .menu__conteiner {
     width: 100%;
-    // height: 120vh;
     background-color: white;
     margin-bottom: 50px;
 
@@ -51,7 +50,6 @@
         gap: 10px;
         justify-content: center;
 
-
         .menu__item {
             width: auto;
             min-width: 24%;
@@ -65,15 +63,14 @@
             .menu__item__img {
                 width: 100%;
                 height: 80%;
-                background-color: green;
-                img{
+                // background-color: green;
+                img {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
                     border-radius: 4px;
-                    
                 }
-                img:hover{
+                img:hover {
                     transform: scale(1.1);
                     cursor: pointer;
                 }
@@ -83,13 +80,11 @@
                 text-align: center;
                 width: 100%;
                 height: 10%;
-                p{
+                p {
                     margin-bottom: 0;
-                    margin: 8px 0 4px;                    
+                    margin: 8px 0 4px;
                 }
             }
         }
-
     }
-
 }
