--- a/src/pages/Menus/Menu_Items/Menu_Item.scss
+++ b/src/pages/Menus/Menu_Items/Menu_Item.scss
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
-
-    background-color: rgb(229, 232, 232);
+    background-color: #181818;
+    color: white;
     margin-bottom: 40px;
 
     .item__container {
@@ -39,7 +39,6 @@
                 width: 90%;
                 height: 40px;
                 margin: 0 auto;
-
                 margin-top: 20px;
                 display: flex;
                 justify-content: space-between;
@@ -48,6 +47,8 @@
                     width: 20%;
                     display: flex;
                     justify-content: center;
+                    background-color: #181818;
+                    color: white;
                     align-items: center;
                     margin-left: 60px;
                     i,
@@ -56,12 +57,12 @@
                         height: 36px;
                         justify-content: center;
                         align-items: center;
-                        border: 1px solid black;
                         border-radius: 4px;
                         display: flex;
                     }
                     i {
-                        background-color: orange;
+                        background-color: #181818;
+                        color: white;
                     }
                 }
                 .price__yourCart {
@@ -71,7 +72,8 @@
                     display: flex;
                     margin-right: 60px;
                     justify-content: center;
-                    background-color: rgb(135, 129, 129);
+                    background-color: #181818;
+                    color: white;
                     border-radius: 12px;
                     p {
                         font-size: 24px;
@@ -93,8 +95,8 @@
                     height: 30px;
                     display: flex;
                     justify-content: center;
-                    background-color: orange;
-                    border: 1px solid black;
+                    background-color: #181818;
+                    color: white;
                     border-radius: 12px;
                 }
                 .addToCart {
@@ -102,11 +104,11 @@
                     height: 30px;
                     display: flex;
                     justify-content: center;
-                    background-color: rgb(43, 180, 43);
-                    border: 1px solid black;
+                    background-color: #181818;
                     border-radius: 12px;
                     button {
-                        background-color: rgb(43, 180, 43);
+                        background-color: #181818;
+                        color: white;
                     }
                 }
             }
@@ -116,6 +118,8 @@
             width: 50%;
             .item__content {
                 margin-top: 48px;
+                background-color: #181818;
+                color: white;
                 h2 {
                     font-weight: 500;
                     font-size: 20px;
@@ -126,7 +130,7 @@
                 }
                 p {
                     width: 100%;
-                    color: #000;
+                    color: white;
                     font-weight: 400;
                     font-size: 16px;
                     margin-top: 20px;
@@ -138,9 +142,9 @@
                 display: flex;
                 margin: 0 auto;
                 justify-content: center;
-                border: 1px solid black;
                 border-radius: 8px;
-                background-color: rgb(205, 205, 199);
+                background-color: #181818;
+                color: white;
                 p {
                     line-height: 40px;
                 }
