--- a/src/components/Navbars/Navbar.scss
+++ b/src/components/Navbars/Navbar.scss
@@ -109,12 +109,12 @@
                     .cart__quantity {
                         height: 16px;
                         width: 16px;
-                        color: red;
+                        color: white;
                         position: absolute;
                         font-size: 16px;
                         font-family: "Times New Roman", Times, serif;
-                        top: 16px;
-                        right: 6px;
+                        top: 20px;
+                        right: -4px;
                     }
                 }
 
